--- a/index.html
+++ b/index.html
@@ -15,49 +15,72 @@
     <span class="sound">clap</span>
   </div>
 
-  <div data-key="65" class="key">
-    <kbd>A</kbd>
+  <div data-key="90" class="key">
+    <kbd>Z</kbd>
     <span class="sound">clap</span>
   </div>
 
-  <div data-key="65" class="key">
-    <kbd>A</kbd>
+  <div data-key="69" class="key">
+    <kbd>E</kbd>
     <span class="sound">clap</span>
   </div>
 
-  <div data-key="65" class="key">
-    <kbd>A</kbd>
+  <div data-key="81" class="key">
+    <kbd>Q</kbd>
     <span class="sound">clap</span>
   </div>
 
-  <div data-key="65" class="key">
-    <kbd>A</kbd>
-    <span class="sound">clap</span>
-  </div>
-
-
-  <div data-key="65" class="key">
-    <kbd>A</kbd>
+  <div data-key="83" class="key">
+    <kbd>S</kbd>
     <span class="sound">clap</span>
   </div>
 
 
-
-  <div data-key="65" class="key">
-    <kbd>A</kbd>
+  <div data-key="68" class="key">
+    <kbd>D</kbd>
     <span class="sound">clap</span>
   </div>
 
 
-  <div data-key="65" class="key">
-    <kbd>A</kbd>
+
+  <div data-key="87" class="key">
+    <kbd>W</kbd>
     <span class="sound">clap</span>
   </div>
 
-  <div data-key="65" class="key">
-    <kbd>A</kbd>
+
+  <div data-key="88" class="key">
+    <kbd>X</kbd>
     <span class="sound">clap</span>
   </div>
+
+  <div data-key="67" class="key">
+    <kbd>C</kbd>
+    <span class="sound">clap</span>
+  </div>
+
+  
+
+
+
+  <div data-key="67" class="key">
+    <kbd>RECORD</kbd>
+    <span class="sound">r</span>
+  </div>
+
+
+
+
+  <div data-key="67" class="key">
+    <kbd>PLAY</kbd>
+    <span class="sound">p</span>
+  </div>
+
+
+  
+
+
+
   <!-- Générer les 8 boxes restantes correspondant aux fichiers audio à jouer -->
 </div>
 <!-- Audio source -->
