ADD: fin de btn record il manque la partie play

--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
 
 
 
-  <div data-key="67" class="key">
+  <div data-key="82" class="key" style="background-color: red; color: white;">
     <kbd>RECORD</kbd>
-    <span class="sound">r</span>
+    <span class="sound" style="color: white;">r</span>
   </div>
 
 
 
 
-  <div data-key="67" class="key">
+  <div data-key="80" class="key" style="background-color: green; color: white;">
     <kbd>PLAY</kbd>
-    <span class="sound">p</span>
+    <span class="sound" style="color: white;">p</span>
   </div>
 
 
